examples/test/testpolicy11515.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11515
  namespace: namespace103
spec:
  podSelector:
    matchLabels:
      key29: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value9
          key33: value25
          key35: value33
      podSelector:
        matchLabels:
          key4: value21
          key31: value24
          key38: value6
